# hearth

./: .dockerignore  .env.example  .gitignore  .mcp.json  .snyk  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE  README.md  SECURITY.md  bacon.toml  build.rs  compose.dev.yaml  compose.yaml  deny.toml  hearth-defaults.yaml  hearth.example.yaml  opencode.json  osv-scanner.toml  package-lock.json  package.json
.cargo/: audit.toml
.claude/: settings.json
.claude/hooks/: run-clippy.sh  run-tests.sh
.config/: nextest.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: bench-regression.yml  ci.yml  dependabot-automerge.yml  fuzz.yml  node-sdk-ci.yml  python-sdk-ci.yml  scorecard.yml  sdk-conformance.yml  snyk.yml
benches/: admin.rs  audit.rs  benchmarks.rs  demotion_latency.rs  oauth.rs  oidc_exchange.rs  permission_check.rs  rbac_check.rs  session_lookup.rs  storage_gate.rs  tiered_storage.rs  token_validation.rs  user_lookup.rs  zanzibar_watch.rs
bruno/: bruno.json
bruno/Admin/: Bootstrap.bru
bruno/OAuth/: Authorize.bru  Device Authorization.bru  Dynamic Client Registration.bru  Introspect Token.bru  Register Client (Public).bru  Revoke Token.bru  Token - Auth Code.bru  Token - Client Credentials.bru  Token - Device Code.bru  Token - Refresh.bru
bruno/Public/: JWKS.bru  OIDC Discovery.bru
bruno/Users/: Create User.bru  UserInfo.bru
bruno/environments/: local.bru
deploy/: README.md  docker-compose.yml  hearth.docker.yaml
deploy/systemd/: hearth.service
docs/: STATUS.md  sdk-spec.md
docs/audit/: test-suite-audit-2026-05-16.md
docs/blog/: hearth-for-ai-agents.md
docs/competitive/: 2026-05-15.md
docs/gaps/: FEATURE_GAPS.md  completeness_analysis.md  completeness_analysis_5_4_26.md
docs/guides/: client-scoped-roles.md  clustering.md  concepts.md  error-codes.md  getting-started.md  hearth-yaml-examples.md  local-dev.md  migrating-from-auth0.md  migrating-from-keycloak.md  organizations.md  rbac.md  scim-provisioning.md  security-hardening.md  storage-sizing.md  troubleshooting.md  webhooks.md
docs/security-audit/: oss-fuzz.md
docs/specs/: AGENT_AUTH.md  AGENT_AUTH_ROADMAP.md  ARCHITECTURE.md  AUTHORIZATION.md  AUTHZ_EXPANSION.md  AUTHZ_HTTP.md  CONFIGURATION.md  CONFIG_VS_UI_GAP_ANALYSIS.md  IMPLEMENTATION_ORDER.md  MIGRATE_TO_RBAC.md  ROLES_UI_REDESIGN.md  TESTING.md  TEST_SCENARIOS.md  THEME.md  THINGS_WE_NEED.md  UI_AUDIT_FINDINGS.md  UI_ROUTING.md
docs/vision/: VISION.md
examples/: README.md
examples/auth0-migration-bundler/: .env.example  README.md  bundle.mjs  package.json
examples/federation-flow/: .gitignore  README.md  hearth.yaml
examples/grpc-admin-flow/: .gitignore  README.md  demo.mjs  health.proto  hearth.yaml  package-lock.json  package.json  reflection.proto  run.sh
examples/oauth-consent-flow/: .env.example  .gitignore  README.md  hearth.yaml
examples/rbac-smoke-test/: README.md  smoke.sh
examples/saml-flow/: .gitignore  README.md  demo.mjs  gen-idp-cert.mjs  hearth.yaml  package.json  run.sh
examples/scim-provisioning/: .gitignore  README.md  demo.mjs  hearth.yaml  package.json  run.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse.rs  credential_verify.rs  federation_claims.rs  jwt_parse.rs  oidc_request_parse.rs  redirect_uri_parse.rs  saml_xml_parse.rs  token_exchange_parse.rs  wal_entry_deserialize.rs  webauthn_cbor_parse.rs
fuzz/seeds/redirect_uri_parse/: custom_scheme  data_scheme  fragment_injected  http_loopback  http_non_loopback  https_valid  wildcard
fuzz/seeds/token_exchange_parse/: malformed_scope.json  mismatched_grant_type.json  over_long_verifier.json  redirect_uri_injection.json  spec_valid_auth_code.json  spec_valid_client_credentials.json  spec_valid_refresh.json
proto/: buf.gen.yaml  buf.yaml
scripts/: check-bench-regression.sh  check-sdk-conformance.sh  check-test-quality.sh  patch-shrinkwrap.js
sdks/: start-server.sh
sdks/go/: CHANGELOG.md  README.md  go.mod  hearth_test.go
sdks/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdks/node/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdks/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdks/python/src/hearth/: __init__.py  _jwks.py  admin.py  claims.py  client.py  errors.py  middleware.py  types.py  verified_token.py
sdks/python/tests/: conftest.py  test_client.py  test_errors.py  test_jwks_cache.py  test_middleware.py  test_oauth_flows.py  test_verified_token.py
sdks/rust/: CHANGELOG.md  Cargo.toml  README.md
sdks/rust/src/: admin.rs  claims.rs  client.rs  error.rs  lib.rs  types.rs
sdks/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
simulation/: Cargo.toml
simulation/src/: lib.rs
simulation/src/tests/: audit_crash.rs  cache_stampede.rs  migration_crash.rs  mod.rs  rbac_concurrent_assignments.rs  realm_concurrent_io.rs  realm_crash.rs  session_crash.rs  sst_compact_crash.rs  sst_crash.rs  tenant_concurrent_io.rs  tenant_crash.rs  tiered_crash.rs  wal_crash.rs  watch_partition.rs
src/: lib.rs  main.rs  metrics.rs  telemetry.rs
src/audit/: context.rs  engine.rs  error.rs  keys.rs  mod.rs  types.rs
tests/: admin.rs  admin_assignments_rbac.rs  admin_audit_ui.rs  admin_bulk_ops.rs  admin_effective_permissions.rs  admin_groups_rbac.rs  admin_onboarding.rs  admin_org_ui.rs  admin_rbac_auth.rs  admin_realm.rs  admin_roles.rs  admin_roles_rbac.rs  admin_users.rs  adversarial.rs  audit.rs  audit_engine_coverage.rs  authz_explain.rs  authz_http.rs  authz_presets.rs  authz_unions.rs  authz_watch_property.rs  certs_jwks.rs  claims_config.rs  cleanup.rs  cli.rs  cli_config.rs  cluster_grpc_loopback.rs  config_snapshot.rs  credentials.rs  cross_cutting.rs  cross_cutting_phase1.rs  cross_realm_migration.rs  dcr.rs  e2e.rs  email_smtp.rs  error_codes.rs  federation.rs  federation_adversarial.rs  federation_conformance.rs  federation_property.rs  (+66 more)
ui/: input.css  tailwind.config.js
(+440 files in other folders)
