[workspace]
members = [".", "simulation"]

[package]
name = "hearth"
version = "0.1.0"
edition = "2021"
description = "Purpose-built identity database: authentication, authorization, and session management"
license = "Apache-2.0"
rust-version = "1.75"

[lib]
name = "hearth"
path = "src/lib.rs"

[[bin]]
name = "hearth"
path = "src/main.rs"

[dependencies]
arc-swap = "1"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
bcrypt = "0.16"
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
crossbeam-epoch = "0.9"
memmap2 = "0.9"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
ureq = { version = "3", features = ["json"] }
unicode-normalization = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "permission_check"
harness = false

[[bench]]
name = "user_lookup"
harness = false

[[bench]]
name = "token_validation"
harness = false

[[bench]]
name = "oidc_exchange"
harness = false

[[bench]]
name = "session_lookup"
harness = false

[[bench]]
name = "tiered_storage"
harness = false

[[bench]]
name = "oauth"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
