[workspace]
members = [".", "simulation"]

[package]
name = "hearth"
version = "0.1.0"
edition = "2021"
description = "Purpose-built identity database: authentication, authorization, and session management"
license = "AGPL-3.0-only"
rust-version = "1.75"

[lib]
name = "hearth"
path = "src/lib.rs"

[[bin]]
name = "hearth"
path = "src/main.rs"

[dependencies]
arc-swap = "1"
askama = "0.12"
pbjson = "0.9"
pbjson-types = "0.9"
prost = "0.14"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
bcrypt = "0.19"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
crossbeam-epoch = "0.9"
data-encoding = "2"
flate2 = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "service", "server-auto"] }
hmac = "0.12"
lettre = { version = "0.11", default-features = false, features = [
    "smtp-transport",
    "rustls-tls",
    "builder",
    "hostname",
] }
memmap2 = "0.9"
password-hash = "0.5"
pbkdf2 = { version = "0.12", default-features = false }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
quick-xml = "0.36"
rcgen = "0.13"
rsa = { version = "0.9", features = ["pem"] }
hex = "0.4"
sha2 = "0.10"
subtle = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
ring = "0.17"
rustls = "0.23"
rustls-pki-types = "1"
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tera = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["transport", "tls-ring", "gzip"] }
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-types = "0.14"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-rustls"] }
opentelemetry-semantic-conventions = "0.31"
ureq = { version = "3", features = ["json"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
woothee = "0.13"
zeroize = { version = "1", features = ["derive"] }
form_urlencoded = "1.2.2"
prometheus = { version = "0.14", default-features = false, features = ["process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# Exposes internal test probes for use by the simulation crate. Never enable in production.
test-hooks = []

[build-dependencies]
pbjson-build = "0.9"
prost-build = "0.14"
tonic-build = { version = "0.14", default-features = false, features = ["transport"] }
tonic-prost-build = { version = "0.14", default-features = false, features = ["transport"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "user_lookup"
harness = false

[[bench]]
name = "token_validation"
harness = false

[[bench]]
name = "oidc_exchange"
harness = false

[[bench]]
name = "session_lookup"
harness = false

[[bench]]
name = "tiered_storage"
harness = false

[[bench]]
name = "oauth"
harness = false

[[bench]]
name = "admin"
harness = false

[[bench]]
name = "audit"
harness = false

[[bench]]
name = "rbac_check"
harness = false

[[bench]]
name = "storage_gate"
harness = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Style/preference lints — intentional patterns throughout the codebase.
doc_markdown = "allow"
manual_let_else = "allow"
assigning_clones = "allow"
default_trait_access = "allow"
redundant_closure_for_method_calls = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
match_same_arms = "allow"
wildcard_in_or_patterns = "allow"
unnecessary_wraps = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
unused_self = "allow"
needless_pass_by_value = "allow"
option_option = "allow"
large_enum_variant = "allow"
single_match_else = "allow"
match_wildcard_for_single_variants = "allow"
explicit_iter_loop = "allow"
return_self_not_must_use = "allow"
unnecessary_map_or = "allow"
doc_lazy_continuation = "allow"
manual_string_new = "allow"
cmp_owned = "allow"
format_collect = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
map_clone = "allow"
needless_range_loop = "allow"
ref_option = "allow"
result_large_err = "allow"
unnecessary_cast = "allow"
unnecessary_literal_bound = "allow"
format_push_string = "allow"
unused_async = "allow"
useless_format = "allow"
redundant_closure = "allow"
collapsible_if = "allow"
