[package]
name = "hearth-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hearth = { path = ".." }
serde_json = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
doc = false

[[bin]]
name = "jwt_parse"
path = "fuzz_targets/jwt_parse.rs"
doc = false

[[bin]]
name = "wal_entry_deserialize"
path = "fuzz_targets/wal_entry_deserialize.rs"
doc = false

[[bin]]
name = "credential_verify"
path = "fuzz_targets/credential_verify.rs"
doc = false

[[bin]]
name = "oidc_request_parse"
path = "fuzz_targets/oidc_request_parse.rs"
doc = false

[[bin]]
name = "webauthn_cbor_parse"
path = "fuzz_targets/webauthn_cbor_parse.rs"
doc = false

[[bin]]
name = "federation_claims"
path = "fuzz_targets/federation_claims.rs"
doc = false
