[project]
name = "hearth-sdk"
version = "0.1.0"
description = "Hearth identity platform Python SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
