[project]
name = "hearth-sdk"
version = "0.2.0"
description = "Hearth identity platform Python SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2",
]

[project.optional-dependencies]
flask = ["flask>=3.0"]
fastapi = ["fastapi>=0.110", "python-multipart>=0.0.9"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "flask>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hearth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=hearth --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["hearth"]
omit = [
    "*/tests/*",
    "*/hearth/claims.py",   # legacy compat layer superseded by VerifiedToken (HEA-355)
    "*/hearth/admin.py",    # AdminClient is out of scope for HEA-497
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
