[package]
name = "hearth-sdk"
version = "0.1.0"
edition = "2021"
description = "Hearth identity platform Rust SDK"
license = "MIT"

[workspace]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
